<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_liquor_name"
            android:text="@string/item_liquor_name"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_liquor_type"
            android:text="@string/item_liquor_type"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_liquor_vegan"
            android:text="@string/item_liquor_vegan"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/item_liquor_created"
            android:text="@string/item_liquor_created"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/item_liquor_modified"
            android:text="@string/item_liquor_modified"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/item_liquor_notes"
            android:text="@string/item_liquor_notes"
            />

</LinearLayout>